# cargo-minify

./: Cargo.toml  README.md
examples/: useless.rs
examples/useless/: Cargo.toml
examples/useless/src/: main.rs
src/: cauterize.rs  diff_format.rs  error.rs  main.rs  resolver.rs  test.rs  unused.rs  useless.rs
src/vcs/: check_vcs.rs  mod.rs
