[package]
name = "cargo-minify"
version = "0.5.0"
edition = "2021"

[[example]]
name = "useless"

[dependencies]
cargo_metadata = "0.17"
diff = "0.1.13"
git2 = "0.17"
glob-match = "0.2.1"
gumdrop = "0.8"
multimap = "0.9"
nu-ansi-term = "0.49.0"
proc-macro2 = { version = "1.0.66", features = ["span-locations"] }
syn = { version = "2.0.28", features = ["full"] }
thiserror = "1.0.44"
