[package]
name = "cargo-minify"
description = "A cargo utility to automatically remove unused code from a Rust project."
categories = [ "development-tools::cargo-plugins" ]
version = "0.5.0"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/tweedegolf/cargo-minify"
homepage = "https://github.com/tweedegolf/cargo-minify"
edition = "2021"
publish = true

[[example]]
name = "useless"

[dependencies]
cargo_metadata = "0.17"
diff = "0.1.13"
git2 = "0.17"
glob-match = "0.2.1"
gumdrop = "0.8"
proc-macro2 = { version = "1.0.66", features = ["span-locations"] }
syn = { version = "2.0.28", features = ["full"] }
thiserror = "1.0.44"
